tests/miz/fail/types/fail_type_elaboration_statement_proof_gap_001.miz
theorem StatementProofPayloadBoundary: thesis proof
  A: thesis proof
    thus thesis;
  end;
  thus thesis proof
    thus thesis by A;
  end;
end;
